--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -55,3 +55,43 @@ supported_commands_by_ecu:
   - 0157:STSO2FT2
   - 0158:LGSO2FT2
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
+unsupported_commands_by_ecu:
+  700:
+  - '700.221059'
+  - '700.221074'
+  - '700.221638'
+  - 700.221F2F
+  701:
+  - 701.709.220103
+  - 701.709.221627
+  - 701.709.221628
+  745:
+  - 745.74D.221739
+  747:
+  - 747.74F.220103
+  - 747.74F.22182E
+  750:
+  - '750.2115'
+  - '750.2116'
+  - 750.758.2130
+  - 750.758.221004
+  - 750.758.221005
+  - 750.758.222021
+  7B0:
+  - 7B0.221006
+  7B1:
+  - 7B1.221026
+  7B3:
+  - 7B3.221004
+  7C0:
+  - 7C0.221021
+  - 7C0.221022
+  - 7C0.7C8.2129
+  7D0:
+  - 7D0.2162
+  7D2:
+  - 7D2.221F5B
+  - 7D2.7DA.22106C
+  - 7D2.7DA.221F0D
+  7E0:
+  - 7E0.7E8.2121
