--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -134,3 +134,57 @@ supported_commands_by_ecu:
   - 014E:CLR_TIME
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
   - 019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
+unsupported_commands_by_ecu:
+  700:
+  - '700.221638'
+  701:
+  - 701.709.221628
+  745:
+  - 745.74D.221739
+  747:
+  - 747.74F.220103
+  - 747.74F.22182E
+  750:
+  - '750.2115'
+  - '750.2116'
+  - 750.758.2130
+  - 750.758.221004
+  - 750.758.221005
+  - 750.758.222021
+  7B0:
+  - 7B0.221006
+  - 7B0.7B8.2103
+  - 7B0.7B8.2121
+  - 7B0.7B8.2147
+  7B1:
+  - 7B1.221026
+  7C0:
+  - 7C0.7C8.2129
+  7D0:
+  - 7D0.2162
+  7D2:
+  - 7D2.221F5B
+  - 7D2.7DA.22106C
+  - 7D2.7DA.221F0D
+  7E0:
+  - 7E0.7E8.0105
+  - 7E0.7E8.010C
+  - 7E0.7E8.0131
+  - 7E0.7E8.0142
+  - 7E0.7E8.015C
+  - 7E0.7E8.2121
+  - 7E0.7E8.2128
+  - 7E0.7E8.2151
+  - 7E0.7E8.2182
+  - 7E0.7E8.2185
+  7E1:
+  - 7E1.7E9.0105
+  - 7E1.7E9.010C
+  - 7E1.7E9.0131
+  - 7E1.7E9.0142
+  7E2:
+  - 7E2.7EA.0105
+  - 7E2.7EA.010C
+  - 7E2.7EA.010F
+  - 7E2.7EA.0131
+  - 7E2.7EA.0142
